fix layout on mobile

--- a/res/main.css
+++ b/res/main.css
@@ -82,11 +82,34 @@
   height: 100%;
 }
 
-/* @media only screen and (max-width: 600px), only screen and (max-height: 600px) {
+@media only screen and (max-width: 600px), only screen and (max-height: 600px) {
   .team-people {
-    /* grid-template-columns: 1fr; */
-    flex-direction: column;
-    flex-wrap: nowrap;
+    display: grid;
+    grid-template-columns: 100%;
+    grid-auto-rows: 100%;
+    grid-row-gap: 20px;
+    grid-column-gap: 5px;
   }
-} */
+
+  .important-people {
+    flex-basis: 80vh;
+    display: grid;
+    grid-template-columns: 100%;
+    grid-template-rows: 100% 100%;
+  
+    grid-column-gap: 15px;
+  
+    width: 100%;
+  }
+
+  .team-people > .profile > .profile-inner {
+    width: 100%;
+    height: 100%;
+  }
+  
+  .important-people > .profile > .profile-inner {
+    width: 100%;
+    height: 100%;
+  }
+}
 
