--- a/res/profile.css
+++ b/res/profile.css
@@ -19,7 +19,7 @@
 }
 
 .profile-image {
-  margin-top: 25px;
+  margin-top: 15px;
   height: 70%;
   max-width: 100%;
   padding-bottom: 5px;
